Refactored code to work on postman